--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     MCROBERTS, Michael. Arduino Básico. 2. ed. rev. São Paulo: Novatec, 2015. 505 p. v. 1. ISBN 978-85-7522-404-5. Disponível em: https://books.google.com.br/books?hl=pt-BR&lr=&id=EqOoBwAAQBAJ&oi=fnd&pg=PA6&dq=info:ntjvaX1J_9MJ:scholar.google.com/&ots=Dfdy7cqD24&sig=qLc9pw7Zku8d7LgBirpytjAhXyw&redir_esc=y#v=onepage&q&f=false. Acesso em: 2 set. 2024.
 </h6>
 <br><br><br>
-                <video width="640" height="360" controls>
+               <video controls>
                         <source src="video1.mp4" type="video/mp4">
                         <source src="video1.ogg" type="video/ogg">
                     </video>
