--- a/index.html
+++ b/index.html
@@ -167,14 +167,16 @@
     mesmo</p>
     <br>
     <br>
-    <h5>Referência:</h5><h6>
-    MCROBERTS, Michael. Arduino Básico. 2. ed. rev. São Paulo: Novatec, 2015. 505 p. v. 1. ISBN 978-85-7522-404-5. Disponível em: https://books.google.com.br/books?hl=pt-BR&lr=&id=EqOoBwAAQBAJ&oi=fnd&pg=PA6&dq=info:ntjvaX1J_9MJ:scholar.google.com/&ots=Dfdy7cqD24&sig=qLc9pw7Zku8d7LgBirpytjAhXyw&redir_esc=y#v=onepage&q&f=false. Acesso em: 2 set. 2024.
-</h6>
+   <h5>Referência:</h5><h6>
+        MCROBERTS, Michael. Arduino Básico. 2. ed. rev. São Paulo: Novatec, 2015. 505 p. v. 1. ISBN 978-85-7522-404-5.
+        <br>Disponível em: https://books.google.com.br/books?hl=pt-BR&lr=&id=EqOoBwAAQBAJ&oi=fnd&pg=PA6&dq=info:ntjvaX1J_9MJ:scholar.google.com/&ots=Dfdy7cqD24&sig=qLc9pw7Zku8d7LgBirpytjAhXyw&redir_esc=y#v=onepage&q&f=false.
+        <br>Acesso em: 02 set. 2024.
+    </h6>
 <br><br><br>
-               <video controls>
+                <center><video width="640" height="360" controls>
                         <source src="video1.mp4" type="video/mp4">
                         <source src="video1.ogg" type="video/ogg">
-                    </video>
+                    </video></center>
             </div>
 
         </div>
