--- a/index.html
+++ b/index.html
@@ -126,9 +126,12 @@
             </div>
 
             <div id="Page1-2" class="tabcontent" style="display:none">
-                <p><img src="image.png" alt="">
-                <img src="image2.png" alt=""></p>
+                <p>
+                    <img src="image.png" alt="Descrição da imagem 1">
+                    <img src="image2.png" alt="Descrição da imagem 2">
+                </p>
             </div>
+            
             <br>
 <br>
 
@@ -137,8 +140,7 @@
 <p> Procedimentos - Enquanto estávamos conduzindo o projeto do semáforo buscamos
     entender por completo os circuitos usados no projeto, com os conhecimentos adquiridos
     realizamos o projeto em sala de aula onde cada um dos integrantes ficou responsável por
-    uma parte do projeto. <br>
-    <br>
+    uma parte do projeto.
     <br><br>
     Resultados:
     O projeto Arduino Semáforo visa criar um protótipo funcional de semáforo utilizando a
@@ -167,9 +169,10 @@
     mesmo</p>
     <br>
     <br>
-   <h5>Referência:</h5><h6>
+    <h5>Referência:</h5><h6>
         MCROBERTS, Michael. Arduino Básico. 2. ed. rev. São Paulo: Novatec, 2015. 505 p. v. 1. ISBN 978-85-7522-404-5.
-        <br>Disponível em: https://books.google.com.br/books?hl=pt-BR&lr=&id=EqOoBwAAQBAJ&oi=fnd&pg=PA6&dq=info:ntjvaX1J_9MJ:scholar.google.com/&ots=Dfdy7cqD24&sig=qLc9pw7Zku8d7LgBirpytjAhXyw&redir_esc=y#v=onepage&q&f=false.
+        <br>Disponível em:
+        <br>"https://books.google.com.br/books?hl=pt-BR&lr=&id=EqOoBwAAQBAJ&oi=fnd&pg=PA6&dq=info:ntjvaX1J_9MJ:scholar.google.com/&ots=Dfdy7cqD24&sig=qLc9pw7Zku8d7LgBirpytjAhXyw&redir_esc=y#v=onepage&q&f=false."
         <br>Acesso em: 02 set. 2024.
     </h6>
 <br><br><br>
@@ -267,5 +270,3 @@
     </div>
 </body>
 </html>
-
-
