--- a/index.html
+++ b/index.html
@@ -169,12 +169,14 @@
     mesmo</p>
     <br>
     <br>
-    <h5>Referência:</h5><h6>
-        MCROBERTS, Michael. Arduino Básico. 2. ed. rev. São Paulo: Novatec, 2015. 505 p. v. 1. ISBN 978-85-7522-404-5.
-        <br>Disponível em:
-        <br>"https://books.google.com.br/books?hl=pt-BR&lr=&id=EqOoBwAAQBAJ&oi=fnd&pg=PA6&dq=info:ntjvaX1J_9MJ:scholar.google.com/&ots=Dfdy7cqD24&sig=qLc9pw7Zku8d7LgBirpytjAhXyw&redir_esc=y#v=onepage&q&f=false."
-        <br>Acesso em: 02 set. 2024.
-    </h6>
+    <div class="reference">
+        <h5>Referência:</h5>
+        <h6>
+            MCROBERTS, Michael. Arduino Básico. 2. ed. rev. São Paulo: Novatec, 2015. 505 p. v. 1. ISBN 978-85-7522-404-5.
+            <br>Disponível em: <a href="https://books.google.com.br/books?hl=pt-BR&lr=&id=EqOoBwAAQBAJ&oi=fnd&pg=PA6&dq=info:ntjvaX1J_9MJ:scholar.google.com/&ots=Dfdy7cqD24&sig=qLc9pw7Zku8d7LgBirpytjAhXyw&redir_esc=y#v=onepage&q&f=false" target="_blank">Link</a>.
+            <br>Acesso em: 02 set. 2024.
+        </h6>
+    </div>    
 <br><br><br>
                 <center><video width="640" height="360" controls>
                         <source src="video1.mp4" type="video/mp4">
