--- a/index.html
+++ b/index.html
@@ -62,8 +62,16 @@
         <div class="modal-content">
             <span class="close" data-modal="modal1">&times;</span>
             <center>
-
-            <h2>Relatório Arduino</h2> </center>
+                <h2>Semáforo em Arduino
+                    <br></center>
+                    <br>
+                    Disciplina: Sistemas de Computação e de Informação
+                    <br>
+                    Laboratório: C32 e C33
+                    <br>
+                    Data: 21/08/2024</h2>
+                    <br> 
+                    <br>
             <!-- Abas para navegação interna -->
            <div class="tab">
                 <button class="tablinks" onclick="openTab(event, 'Page1-1', 'modal1')"><</button>
