--- a/index.html
+++ b/index.html
@@ -54,6 +54,21 @@
                 E-mail: isarib1998@gmail.com
                 </p>
         </section>
+        <section id="report5" class="report-section">
+            <h2>ILucas Barata Cabacho</h2>
+          <b><p>Detalhes do(a) aluno(a):</b><br>
+                Cursando: Sistemas da Informação <br>
+                Período: 4° <br>
+                E-mail: ilucasbaratamc@gmail.com
+                </p>
+        </section>
+        <section id="report6" class="report-section">
+            <h2>Rafael Luiz de Almeida Souza</h2>
+          <b><p>Detalhes do(a) aluno(a):</b><br>
+                Cursando: Sistemas da Informação <br>
+                Período: 4° <br>
+                </p>
+        </section>
     </main>
 
     <!-- Modals -->
