--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
                 </p>
         </section>
         <section id="report5" class="report-section">
-            <h2>ILucas Barata Cabacho</h2>
+            <h2>Lucas Barata Cabacho</h2>
           <b><p>Detalhes do(a) aluno(a):</b><br>
                 Cursando: Sistemas da Informação <br>
                 Período: 4° <br>
-                E-mail: ilucasbaratamc@gmail.com
+                E-mail: lucasbaratamc@gmail.com
                 </p>
         </section>
         <section id="report6" class="report-section">
