--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="#report2" class="open-modal" data-modal="modal2">Relatório Potenciômetro</a></li>
                 <li><a href="#report3" class="open-modal" data-modal="modal3">Relatório Sensor</a></li>
                 <li><a href="#report4" class="open-modal" data-modal="modal4">Relatório Sensor.2</a></li>
-                <li><a href="#report5" class="open-modal" data-modal="modal4">Relatório 5</a></li>
+                <li><a href="#report5" class="open-modal" data-modal="modal5">Relatório 5</a></li>
                 <li><a href="#report6" class="open-modal" data-modal="modal6">Relatório 6</a></li>
 
             </ul>
@@ -631,7 +631,7 @@
 
 
     <!-- Modal 5 ---------------------------------------------------------------------------------->
-    <div id="modal5" class="modal">
+    <div id="modal5" class="moda5">
         <div class="modal-content">
             <span class="close" data-modal="modal3">&times;</span>
             <center>
@@ -646,19 +646,19 @@
                     <br> 
                     <br>
                 <div class="tab">
-                <button class="tablinks" onclick="openTab(event, 'Page3-1', 'modal3')"><</button>
-                <button class="tablinks" onclick="openTab(event, 'Page3-2', 'modal3')">2</button>
-                <button class="tablinks" onclick="openTab(event, 'Page3-3', 'modal3')">></button>
+                <button class="tablinks" onclick="openTab(event, 'Page5-1', 'modal3')"><</button>
+                <button class="tablinks" onclick="openTab(event, 'Page5-2', 'modal3')">2</button>
+                <button class="tablinks" onclick="openTab(event, 'Page5-3', 'modal3')">></button>
             </div>
             
-            <div id="Page3-1" class="tabcontent">
+            <div id="Page5-1" class="tabcontent">
                 <br>
                 <p>
                     CONTEUDO</p>
             </div>
 
             <!-------------------------------------------------------->
-            <div id="Page3-2" class="tabcontent" style="display:none">
+            <div id="Page5-2" class="tabcontent" style="display:none">
                 <br><br><p>
                     CONTEUDO
 
@@ -670,7 +670,7 @@
 
             <!-------------------------------------------------------->
 
-            <div id="Page3-3" class="tabcontent" style="display:none">
+            <div id="Page5-3" class="tabcontent" style="display:none">
                 <br><br>
                 <p>
                     CONTEUDO
