--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- Header -->
     <header>
         <h1>Blog da Faculdade</h1>
+        <br><br>
         <nav>
             <ul>
                 <li><a href="#report1" class="open-modal" data-modal="modal1">Relatório Semafaro</a></li>
@@ -27,53 +28,13 @@
     <main>
         
         <section id="report1" class="report-section">
-           <h2>Ariany Martins da Silva</h2>
-         <b><p>Detalhes do(a) aluno(a):</b><br>
-               Cursando: Sistemas da Informação.<br>
+           <h2>Mas por que??</h2>
+         <b><p>Sobre nós:</b><br><br>
+               Certo, somos um grupo de alunos de Sistema da Informação onde nos foi passado trabalhos relacionados a Arduino,
+               além de realizarmos automações e apredermos na prática o sistema por inteiro, realizamos alguns relatórios para
+               que possam nos ajudar e outros estudantes que buscam saber um pouco mais sobre, esperamos que nossas analises os satisfaçam!<br><br>
                Período: 4° <br>
-               E-mail: arianymartinsdasilva@gmail.com
             </p>
-        </section>
-        <section id="report2" class="report-section">
-           <h2>Filipe Dantas de Morais</h2>
-         <b><p>Detalhes do(a) aluno(a):</b><br>
-               Cursando: Sistemas da Informação.<br>
-               Período: 4° <br>
-               E-mail: dantasfilipe145@gmail.com
-            </p>
-        </section>
-        <section id="report3" class="report-section">
-            <h2>Guilherme Antônio Bernardes Borges</h2>
-          <b><p>Detalhes do(a) aluno(a):</b><br>
-                Cursando: Sistemas da Informação <br>
-                Período: 4° <br>
-                E-mail: guilhermebernardessz10@gmail.com
-                </p>
-        </section>
-        <section id="report4" class="report-section">
-            <h2>Isabella Fonseca Ribeiro</h2>
-          <b><p>Detalhes do(a) aluno(a):</b><br>
-                Cursando: Sistemas da Informação <br>
-                Período: 4° <br>
-                E-mail: isarib1998@gmail.com
-                </p>
-        </section>
-        <section id="report5" class="report-section">
-            <h2>Lucas Barata Camacho</h2>
-          <b><p>Detalhes do(a) aluno(a):</b><br>
-                Cursando: Sistemas da Informação <br>
-                Período: 4° <br>
-                E-mail: lucasbaratamc@gmail.com
-                </p>
-        </section>
-        <section id="report6" class="report-section">
-            <h2>Rafael Luiz de Almeida Souza</h2>
-          <b><p>Detalhes do(a) aluno(a):</b><br>
-                Cursando: Sistemas da Informação <br>
-                Período: 4° <br>
-                E-mail: rafaellook@yahoo.com.br
-                </p>
-        </section>
     </main>
 
     <!-- Modals -->
