--- a/index.html
+++ b/index.html
@@ -1244,8 +1244,8 @@
             </h6>
             <br><br>
             <center><video width="640" height="560" controls>
-                <source src="" type="video/mp4">
-                <source src="" type="video/ogg">
+                <source src="server1.mp4" type="video/mp4">
+                <source src="server1.ogg" type="video/ogg">
             </video></center>
 
 
@@ -1455,8 +1455,8 @@
             </h6>
             <br><br>
             <center><video width="640" height="560" controls>
-                <source src="Led.mp4" type="video/mp4">
-                <source src="Led.ogg" type="video/ogg">
+                <source src="server2.mp4" type="video/mp4">
+                <source src="server2.ogg" type="video/ogg">
             </video></center>
 
 
@@ -1667,8 +1667,8 @@
             </h6>
             <br><br>
             <center><video width="640" height="560" controls>
-                <source src="4481ae29ed8f4194b6c1e16e72dd7918.mp4" type="video/mp4">
-                <source src="4481ae29ed8f4194b6c1e16e72dd7918.ogg" type="video/ogg">
+                <source src="Led.mp4" type="video/mp4">
+                <source src="Led.ogg" type="video/ogg">
             </video></center>
 
 
